--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@remix-run/node": "^2.6.0",
     "@remix-run/react": "^2.6.0",
     "@remix-run/serve": "^2.6.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.5",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.6.0",
